--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -52,12 +52,12 @@
 // $orange:  #fd7e14 !default;
 // $yellow:  #ffc107 !default;
 // $green:   #198754 !default;
-// $teal:    #20c997 !default;
+   $teal:    #20c997 !default;
 // $cyan:    #0dcaf0 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
-// $colors: (
+  $colors: (
 //   "blue":       $blue,
 //   "indigo":     $indigo,
 //   "purple":     $purple,
@@ -66,12 +66,12 @@
 //   "orange":     $orange,
 //   "yellow":     $yellow,
 //   "green":      $green,
-//   "teal":       $teal,
+    "teal":       $teal,
 //   "cyan":       $cyan,
 //   "white":      $white,
 //   "gray":       $gray-600,
 //   "gray-dark":  $gray-800
-// ) !default;
+) !default;
 // scss-docs-end colors-map
 
 // fusv-disable
