--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,5 @@
 .c_nav_header {
-  background-color: white;
+  background-color: rgb(210, 19, 19);
   display: flex;
   justify-content: center;
   align-items: center;
