--- a/src/scss/custom_page.scss
+++ b/src/scss/custom_page.scss
@@ -1,7 +1,9 @@
 .home {
+  background-color: rgb(2,2,44);
   .body {
     display: flex;
     flex-direction: row;
+    background-color: rgb(2, 2, 44);
     width: 1100px;
     margin-left: auto;
     margin-right: auto;
@@ -15,7 +17,7 @@
     }
     .content {
       h1 {
-        color: #000;
+        color: #f7f4f4;
         font-family: Inter;
         font-size: 96px;
         font-style: normal;
@@ -39,7 +41,7 @@
 
         &__item {
           h3 {
-            color: #000;
+            color: #f8f8f8;
             font-family: Inter;
             font-size: 24px;
             font-style: normal;
@@ -59,6 +61,21 @@
       }
     }
   }
+}
+.about{
+  .logo {
+    img {
+      height: 301px;
+      position: absolute;
+      top: -40px;
+      left: 30px;
+    }
+  }
+  .carousel{
+    height:100px;
+    margin-top: 60px;
+  }
+
 }
 
 .plans {
