--- a/src/scss/custom_page.scss
+++ b/src/scss/custom_page.scss
@@ -132,7 +132,7 @@
 }
 
 .teams {
-  background-color: #c24646;
+  background-color: #060101;
   padding-top: 24px;
   padding-bottom: 24px;
   .logo {
