--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -30,7 +30,7 @@
 }
 
 .c_footer_wrapper {
-  background-color: white;
+  background-color: rgb(13, 3, 3);
   display: flex;
   justify-content: space-around;
   align-items: center;
